ADJ\Lab2 1a,1d,4,5,6,8a,8b,9,10 Complete

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ Thumbs.db
 # Executables
 # ===============================
 *.exe
+
+#================================
+# Other Files
+#================================
+*.txt
